# SpeedSolver

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
SpeedSolverBackend/: Dockerfile  main.py  pyproject.toml
SpeedSolverBackend/SpeedSolverAPI/: .env.example  Makefile  main.py  pyproject.toml
SpeedSolverBackend/SpeedSolverAPI/alembic/: env.py
SpeedSolverBackend/SpeedSolverAPI/alembic/versions/: 0e4781564a75_.py  22597e49a182_.py  413a0a1e2a82_.py  4630536578ce_.py  6cd626781d1d_.py  71e39764394a_.py  773befd83c8c_.py  8b853cb3f6b1_.py  8e123518ebf0_.py  9de830d79c1b_.py  ac9ac15d4681_.py  b8313aedc993_.py  b905fe5accfc_.py  cb3ecc802430_.py  d40a5d84b9cb_.py  e295c86a8c25_.py  fb9c2c305319_.py
SpeedSolverBackend/SpeedSolverAPI/app/cfg/: config.py  settings.py
SpeedSolverBackend/SpeedSolverAPI/app/database/: database.py
SpeedSolverBackend/SpeedSolverAPI/app/database/abstract/: abc_repo.py
SpeedSolverBackend/SpeedSolverAPI/app/database/models/: models.py  objectives.py  objectve.py  organization.py  project.py  project_objectives.py  projects.py  team.py  team_members.py  team_projects.py  user.py  user_profile.py
SpeedSolverBackend/SpeedSolverAPI/app/database/repo/: organization_repository.py  team_repository.py  user_profile_repository.py  user_repository.py
SpeedSolverBackend/SpeedSolverAPI/app/routing/: access.py  access_router.py  account_router.py  auth.py  main_router.py  organization_router.py  team_router.py
SpeedSolverBackend/SpeedSolverAPI/app/routing/security/: cryptography.py  jwtmanager.py  jwttype.py  oauth.py
SpeedSolverBackend/SpeedSolverAPI/app/schema/: GetService.py  create_team.py
SpeedSolverBackend/SpeedSolverAPI/app/schema/request/account/: updateprofile.py
SpeedSolverBackend/SpeedSolverAPI/app/schema/request/get_access/: authorize.py  register.py
SpeedSolverBackend/SpeedSolverAPI/app/schema/request/team/: create_team.py  (+1 more)
SpeedSolverBackend/SpeedSolverAPI/app/schema/response/: AccessToken.py  UserRegister.py
SpeedSolverBackend/SpeedSolverAPI/app/services/: organization_service.py  team_service.py  user_profile_service.py  user_service.py
SpeedSolverBackend/SpeedSolverAPI/app/services/user_service/: authorize.py
SpeedSolverBackend/SpeedSolverAPI/app/utils/: result.py
SpeedSolverBackend/SpeedSolverAPI/app/utils/logger/: logger.py
SpeedSolverBackend/SpeedSolverAPI/docker/: docker-compose.backend.yml
SpeedSolverBackend/WebSocket/: Dockerfile
SpeedSolverBackend/alembic/versions/: 19aea4047442_.py
SpeedSolverBackend/app/cfg/: apiConfig.py  configModel.py
SpeedSolverBackend/app/routing/: auth.py  main_router.py
WebSocket/: in-project-chat-socket.py  pyproject.toml  sockeserver.py
WebSocket/models/: msg.py
WebSocket/utils/: postmessage.py
(+301 files in other folders)
