[tool.poetry]
name = "speedsolverapi"
version = "0.1.0"
description = ""
authors = ["xxxw1tnessbtwxxx <work.w1tnessbtw@mail.ru>"]
license = "Apache License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
yarl = "^1.17.1"
asyncio = "^3.4.3"
uvicorn = "^0.32.0"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
