[tool.poetry]
name = "serverchat"
version = "0.1.0"
description = ""
authors = ["xxxw1tnessbtwxxx <work.w1tnessbtw@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^13.1"
requests = "^2.32.3"
asyncio = "^3.4.3"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
