[tool.poetry]
name = "speedsolverapi"
version = "0.1.0"
description = ""
authors = ["xxxw1tnessbtwxxx <work.w1tnessbtw@mail.ru>"]
license = "Apache License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
yarl = "^1.17.1"
asyncio = "^3.4.3"
uvicorn = "^0.32.0"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
py-automapper = "^1.2.3"
pytest = "^8.3.4"
bcrypt = "^4.2.1"
pyjwt = "^2.10.1"
jose = "^1.0.0"
python-multipart = "^0.0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
