[tool.poetry]
name = "speedsolverapi"
version = "0.1.0"
description = ""
authors = ["xxxw1tnessbtwxxx <work.w1tnessbtw@mail.ru>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.1"
alembic = "^1.14.0"
fastapi = "^0.115.6"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
pydantic = "^2.10.3"
pydantic-settings = "^2.6.1"
pyjwt = "^2.10.1"
bcrypt = "^4.2.1"
python-multipart = "^0.0.19"
yarl = "^1.18.3"
starlette = "^0.41.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
